# planning-mcp

./: README.md  pyproject.toml
src/planning_mcp/: __init__.py  __main__.py  db.py  models.py  reanchor.py  sections.py  state.py  tools.py  vault.py  web.py
src/planning_mcp/static/: index.html  styles.css
src/planning_mcp/static/js/: api.js  comments.js  highlight.js  main.js  render.js  resize.js  sidebar.js  sse.js  state.js  toolbar.js
