[project]
name = "planning-mcp"
version = "0.1.0"
description = "MCP server for interactive plan review with browser annotation"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.18.0,<2",
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.32.0,<1",
    "pydantic>=2.10.0,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0,<1",
    "mypy>=1.14.0,<2",
]

[project.scripts]
planning-mcp = "planning_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planning_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
